make deps into devdeps

--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "webpack-cli": "^3.2.3",
     "shebang-loader": "0.0.1",
     "svg-to-react-native-cli": "0.0.3",
     "webpack": "^4.29.6"
-  },
-  "devDependencies": {
-    "webpack-cli": "^3.2.3"
   }
 }
